# ethrex

./: Cargo.toml
benches/: Cargo.toml
cmd/ethrex/: Cargo.toml
crates/blockchain/: Cargo.toml
crates/blockchain/dev/: Cargo.toml
crates/blockchain/metrics/: Cargo.toml
crates/common/: Cargo.toml  common.rs  constants.rs  errors.rs  evm.rs  utils.rs  validation.rs
crates/common/config/: Cargo.toml
crates/common/crypto/: Cargo.toml  kzg.rs  lib.rs
crates/common/crypto/blake2f/: mod.rs
crates/common/rlp/: Cargo.toml  decode.rs  encode.rs  error.rs  structs.rs
crates/common/trie/: Cargo.toml  db.rs  error.rs  nibbles.rs  node.rs  node_hash.rs  rkyv_utils.rs  rlp.rs  sync_compat.rs  trie.rs  trie_iter.rs  trie_sorted.rs
crates/common/trie/node/: branch.rs  extension.rs  leaf.rs
crates/common/types/: account.rs  account_update.rs  blobs_bundle.rs  block.rs  block_access_list.rs  block_execution_witness.rs  fork_id.rs  genesis.rs  payload.rs  receipt.rs  requests.rs  transaction.rs  tx_fields.rs
crates/common/types/l2/: balance_diff.rs  batch.rs  fee_config.rs
crates/guest-program/: Cargo.toml
crates/guest-program/src/: lib.rs
crates/guest-program/src/common/: error.rs  execution.rs
crates/guest-program/src/l1/: input.rs  output.rs
crates/l2/: Cargo.toml
crates/l2/common/: Cargo.toml
crates/l2/networking/rpc/: Cargo.toml
crates/l2/prover/: Cargo.toml
crates/l2/sdk/: Cargo.toml
crates/l2/sdk/contract_utils/: Cargo.toml
crates/l2/storage/: Cargo.toml
crates/networking/p2p/: Cargo.toml
crates/networking/rpc/: Cargo.toml
crates/storage/: Cargo.toml
crates/vm/: Cargo.toml  db.rs  errors.rs  execution_result.rs  lib.rs  sync_compat.rs  witness_db.rs
crates/vm/backends/: mod.rs
crates/vm/backends/levm/: db.rs  mod.rs
crates/vm/levm/: Cargo.toml
crates/vm/levm/runner/: Cargo.toml
crates/vm/levm/src/: account.rs  call_frame.rs  constants.rs  debug.rs  environment.rs  errors.rs  execution_handlers.rs  gas_cost.rs  lib.rs  memory.rs  opcodes.rs  precompiles.rs  sync_compat.rs  tracing.rs  utils.rs  vm.rs
crates/vm/levm/src/db/: gen_db.rs  mod.rs
crates/vm/levm/src/hooks/: backup_hook.rs  default_hook.rs  hook.rs  l2_hook.rs
crates/vm/levm/src/opcode_handlers/: arithmetic.rs  block.rs  environment.rs  exchange.rs  logging.rs  stack_memory_storage_flow.rs  system.rs
l2/fundamentals/: timelock.html
test/: Cargo.toml
tooling/archive_sync/: Cargo.toml
tooling/ef_tests/blockchain/: Cargo.toml  lib.rs  ssz_types.rs  test_runner.rs  types.rs
tooling/ef_tests/state_v2/: Cargo.toml
tooling/hive_report/: Cargo.toml
tooling/load_test/: Cargo.toml
tooling/loc/: Cargo.toml
tooling/migrations/: Cargo.toml
tooling/monitor/: Cargo.toml
tooling/reorgs/: Cargo.toml
tooling/repl/: Cargo.toml
