[workspace]
members = [
  "benches",
  "cmd/ethrex",
  "crates/blockchain",
  "crates/blockchain/dev",
  "crates/common",
  "crates/common/rlp",
  "crates/common/trie",
  "crates/common/crypto",
  "crates/l2/",
  "crates/l2/common",
  "crates/l2/prover",
  "crates/guest-program",
  "crates/l2/sdk",
  "crates/l2/sdk/contract_utils",
  "crates/l2/storage",
  "crates/l2/networking/rpc",
  "crates/networking/p2p",
  "crates/networking/rpc",
  "crates/storage",
  "crates/vm",
  "crates/vm/levm",
  "crates/vm/levm/runner",
  "crates/common/config",
  "tooling/repl",
  "test",
]
exclude = ["crates/vm/levm/bench/revm_comparison"]
resolver = "2"

default-members = ["cmd/ethrex"]

[workspace.package]
version = "9.0.0"
edition = "2024"
authors = ["LambdaClass"]
documentation = "https://docs.ethrex.xyz"
license = "MIT OR Apache-2.0"

[profile.dev]
debug = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = 2

[profile.release-with-debug-assertions]
inherits = "release"
debug-assertions = true

[workspace.dependencies]
ethrex-blockchain = { path = "./crates/blockchain", default-features = false }
ethrex-common = { path = "./crates/common", default-features = false }
ethrex-config = { path = "./crates/common/config" }
ethrex-p2p = { path = "./crates/networking/p2p" }
ethrex-rpc = { path = "./crates/networking/rpc" }
ethrex-storage = { path = "./crates/storage" }
ethrex-vm = { path = "./crates/vm", default-features = false }
ethrex-levm = { path = "./crates/vm/levm", default-features = false }
ethrex-trie = { path = "./crates/common/trie", default-features = false }
ethrex-rlp = { path = "./crates/common/rlp", default-features = false }
ethrex-crypto = { path = "./crates/common/crypto", default-features = false }
ethrex-metrics = { path = "./crates/blockchain/metrics" }
ethrex-l2 = { path = "./crates/l2" }
ethrex-l2-common = { path = "./crates/l2/common" }
ethrex-sdk = { path = "./crates/l2/sdk" }
ethrex-prover = { path = "./crates/l2/prover" }
ethrex-guest-program = { path = "./crates/guest-program" }
ethrex-storage-rollup = { path = "./crates/l2/storage" }
ethrex = { path = "./cmd/ethrex" }
ethrex-l2-rpc = { path = "./crates/l2/networking/rpc" }
ethrex-monitor = { path = "./tooling/monitor" }
ethrex-repl = { path = "./tooling/repl" }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }

async-trait = "0.1.88"
ethereum-types = { version = "0.15.1", default-features = false, features = ["serialize"] }
serde = { version = "1.0.203", default-features = false, features = ["derive", "rc", "alloc"] }
serde_with = { version = "3.11.0", default-features = false, features = ["macros"] }
serde_json = "1.0.117"
bytes = { version = "1.6.0", default-features = false }
tokio = { version = "1.41.1", default-features = false }
thiserror = { version = "2.0.9", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = "0.4.1"
crc32fast = { version = "1.4.2", default-features = false }
lazy_static = "1.5.0"
sha2 = { version = "0.10.9", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
tokio-util = { version = "0.7.15", features = ["rt"] }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["socks", "json"] }
rustc-hash = { version = "2.1.1", default-features = false }
snap = "1.1.1"
secp256k1 = { version = "0.30.0", default-features = false, features = [
  "global-context",
  "recovery",
  "rand",
] }
axum = { version = "0.8.1" }
clap = { version = "4.3", features = ["derive", "env"] }
clap_complete = "4.5.17"
eyre = "0.6.12"
rustc-hex = "2.1.0"
url = { version = "2.5.4", features = ["serde"] }
kzg-rs = "0.2.6"
libsql = "0.9.10"
futures = "0.3.31"
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", rev = "54ca2471624700536561b6bd369ed9f4d327991e", package = "agg_mode_sdk" }
spawned-concurrency = "0.4.2"
spawned-rt = "0.4.2"
lambdaworks-crypto = "0.13.0"
tui-logger = { version = "0.17.3", features = ["tracing-support"] }
crossbeam = "0.8.4"
rayon = "1.10.0"
rkyv = { version = "0.8.10", default-features = false, features = ["alloc", "unaligned", "bytecheck"] }
tempfile = "3.8"
uuid = { version = "1.18.1", features = ["v4"] }
tower-http = { version = "0.6.2", features = ["cors"] }
indexmap = { version = "2.11.4" }
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa", "alloc"] }
anyhow = "1.0.86"

rocksdb = { version = "0.24.0", default-features = false, features = [
  "bindgen-runtime",
  "lz4",
] }

[workspace.lints.clippy]
redundant_clone = "warn"
