[package]
name = "ethrex-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-rlp = { workspace = true, default-features = false }
ethrex-trie = { workspace = true, default-features = false }
ethrex-crypto = { workspace = true, default-features = false }

tracing = { workspace = true, optional = true }
tinyvec = "1.6.0"
ethereum-types.workspace = true
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
sha2.workspace = true
kzg-rs = { workspace = true, optional = true }
sha3.workspace = true
once_cell = { version = "1.20.2", optional = true }
libc = { version = "0.2", optional = true }
crc32fast.workspace = true
bytes = { workspace = true }
hex.workspace = true
hex-literal.workspace = true
lazy_static = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
url = { workspace = true, optional = true }
rkyv.workspace = true
rustc-hash.workspace = true
hashbrown = { version = "0.15", features = ["serde"] }
k256.workspace = true

hex-simd = { version = "0.8.0", optional = true }

secp256k1 = { workspace = true, optional = true }

[features]
default = ["std", "secp256k1"]
std = [
    "dep:tracing",
    "dep:serde_json",
    "dep:once_cell",
    "dep:libc",
    "dep:lazy_static",
    "dep:rayon",
    "dep:url",
    "dep:hex-simd",
    "dep:kzg-rs",
    "ethrex-rlp/std",
    "ethrex-trie/std",
    "ethrex-crypto/std",
    "ethereum-types/std",
    "k256/std",
    "bytes/serde",
    "serde/std",
    "thiserror/std",
    "rkyv/std",
    "rkyv/bytecheck",
]
c-kzg = ["ethrex-crypto/c-kzg"]
secp256k1 = ["dep:secp256k1"]

risc0 = ["ethrex-crypto/risc0"]
sp1 = []
zisk = []
openvm = ["ethrex-crypto/openvm"]

[lib]
path = "./common.rs"

[lints.clippy]
unwrap_used = "deny"
redundant_clone = "warn"
