[package]
name = "ethrex-vm"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
ethrex-common = { workspace = true, default-features = false }
ethrex-crypto = { workspace = true, default-features = false }
ethrex-levm = { path = "./levm", default-features = false }
ethrex-trie = { workspace = true, default-features = false }
ethrex-rlp = { workspace = true, default-features = false }

bytes = { workspace = true }
thiserror.workspace = true
lazy_static = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
serde = { workspace = true }
rkyv = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
rustc-hash.workspace = true
hashbrown = "0.15"

bincode = { version = "1", optional = true }
dyn-clone = "1.0"

ethereum-types = { workspace = true, optional = true }

[lib]
path = "./lib.rs"

[features]
default = ["std", "secp256k1"]
std = [
    "dep:lazy_static",
    "dep:tracing",
    "dep:rkyv",
    "dep:rayon",
    "dep:bincode",
    "dep:ethereum-types",
    "ethrex-common/std",
    "ethrex-levm/std",
    "ethrex-trie/std",
    "ethrex-rlp/std",
    "ethrex-crypto/std",
    "bytes/serde",
    "serde/std",
    "thiserror/std",
    "hashbrown/rayon",
]

secp256k1 = ["ethrex-levm/secp256k1", "ethrex-common/secp256k1"]
c-kzg = ["ethrex-levm/c-kzg", "ethrex-common/c-kzg"]

sp1 = ["ethrex-levm/sp1", "ethrex-common/sp1"]
risc0 = ["ethrex-levm/risc0", "ethrex-common/risc0", "c-kzg"]
zisk = ["ethrex-levm/zisk", "ethrex-common/zisk"]
openvm = ["ethrex-levm/openvm", "ethrex-common/openvm"]
perf_opcode_timings = ["ethrex-levm/perf_opcode_timings"]

debug = ["ethrex-levm/debug"]

[lints.clippy]
unwrap_used = "deny"
redundant_clone = "warn"
