[package]
name = "ethrex-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
ethrex-p2p.workspace = true
ethrex-common = { workspace = true, features = ["std"] }
serde_json.workspace = true
serde = { workspace = true, features = ["std"] }
hex.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true
