[package]
name = "ethrex-rlp"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
tinyvec = "1.6.0"
thiserror.workspace = true
bytes = { workspace = true }
hex.workspace = true
lazy_static = { workspace = true, optional = true }
ethereum-types.workspace = true
snap = { workspace = true, optional = true }

[features]
default = ["std"]
std = ["dep:snap", "dep:lazy_static", "ethereum-types/std", "thiserror/std"]

[lib]
path = "./rlp.rs"

[lints]
workspace = true
