[package]
name = "ethrex-trie"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
ethrex-crypto.workspace = true
ethrex-rlp = { workspace = true, default-features = false }

ethereum-types.workspace = true
anyhow = { version = "1.0.86", optional = true }
bytes = { workspace = true }
tracing = { workspace = true, optional = true }
thiserror.workspace = true
hex.workspace = true
serde = { workspace = true }
serde_json = { version = "1.0.117", optional = true }
smallvec = { version = "1.10.0", features = ["const_generics", "union"] }
digest = "0.10.6"
lazy_static = { workspace = true, optional = true }
crossbeam = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
rustc-hash.workspace = true
hashbrown = "0.15"
rkyv.workspace = true

[features]
default = ["std"]
std = ["dep:anyhow", "dep:serde_json", "dep:lazy_static", "dep:crossbeam", "dep:rayon", "dep:tracing", "ethereum-types/std", "ethrex-rlp/std", "ethrex-crypto/std", "bytes/serde", "serde/std", "thiserror/std", "rkyv/std", "rkyv/bytecheck"]

[lib]
path = "./trie.rs"

[lints]
workspace = true
