[package]
name = "ethrex-l2-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
ethereum-types.workspace = true
ethrex-common = { workspace = true, features = ["std"] }
ethrex-crypto = { workspace = true, features = ["std"] }
ethrex-rlp = { workspace = true, features = ["std"] }
ethrex-trie = { workspace = true, features = ["std"] }
ethrex-vm = { workspace = true, features = ["std"] }

bytes = { workspace = true, features = ["serde"] }
thiserror = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["std"] }
lambdaworks-crypto.workspace = true
sha3.workspace = true
hex.workspace = true
serde_with = { workspace = true, features = ["std"] }
# We do not need to enable the "unaligned" feature here since we are just using
# rkyv for ProverInputData, a data structure meant to be used in the host and not
# inside a guest program
rkyv = { workspace = true, features = ["std"] }
k256.workspace = true
tracing.workspace = true

secp256k1 = { workspace = true, optional = true }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
as_conversions = "deny"
unnecessary_cast = "warn"
panic = "deny"
redundant_clone = "warn"

[features]
default = ["secp256k1"]
secp256k1 = ["dep:secp256k1"]
risc0 = []
sp1 = []
zisk = []
