[package]
name = "ethrex-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { features = ["ws"], workspace = true }
tower-http.workspace = true
serde = { workspace = true, features = ["std"] }
serde_json = "1.0.117"
tokio = { workspace = true, features = ["full"] }
bytes = { workspace = true, features = ["serde"] }
tracing.workspace = true
tracing-subscriber.workspace = true
ethrex-common = { workspace = true, features = ["std"] }
ethrex-storage.workspace = true
ethrex-vm = { workspace = true, features = ["std"] }
ethrex-blockchain.workspace = true
ethrex-metrics.workspace = true
ethrex-crypto = { workspace = true, features = ["std"] }
ethrex-p2p = { workspace = true, features = ["test-utils"] }
ethrex-rlp = { workspace = true, features = ["std"] }
ethrex-trie = { workspace = true, features = ["std"] }
ethrex-storage-rollup = { workspace = true, optional = true }
ethrex-l2-common = { workspace = true, optional = true }
ethereum-types.workspace = true
hex.workspace = true
axum-extra = { version = "0.10.0", features = ["typed-header"] }
jsonwebtoken.workspace = true
rand.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
reqwest.workspace = true
sha2.workspace = true
jemalloc_pprof = { version = "0.8.0", optional = true, features = [
    "flamegraph",
    "symbolize",
] }
spawned-rt.workspace = true
spawned-concurrency.workspace = true

# Clients
envy = "0.4.2"
thiserror = { workspace = true, features = ["std"] }
secp256k1.workspace = true
uuid.workspace = true
hex-literal = "0.4.1"

[dev-dependencies]
hex-literal = "0.4.1"

[lib]
path = "./lib.rs"

[lints.clippy]
unwrap_used = "deny"
redundant_clone = "warn"

[features]
jemalloc_profiling = ["dep:jemalloc_pprof"]
