[package]
name = "ethrex-levm"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
lazy_static = { workspace = true, optional = true }
ethrex-common = { workspace = true, default-features = false }
ethrex-crypto = { workspace = true, default-features = false }
ethrex-rlp = { workspace = true, default-features = false }

bytes = { workspace = true }
thiserror.workspace = true
serde = { workspace = true }
serde_json = { workspace = true, optional = true }

datatest-stable = { version = "0.2.9", optional = true }
walkdir = { version = "2.5.0", optional = true }
p256 = { version = "0.13.2", features = [
  "ecdsa",
  "arithmetic",
  "expose-field",
], optional = true }
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
ripemd = { version = "0.1.3", optional = true }
malachite = { version = "0.6.1", optional = true }
lambdaworks-math = { version = "0.13.0", optional = true }
bls12_381 = { git = "https://github.com/lambdaclass/bls12_381", branch = "expose-fp-struct", features = [
  "groups",
  "bits",
  "pairings",
  "alloc",
  "experimental",
], optional = true }
ark-bn254 = { version = "0.5.0", optional = true }
ark-ec = { version = "0.5.0", optional = true }
ark-ff = { version = "0.5.0", features = ["asm"], optional = true }
strum = { version = "0.27.1", default-features = false, features = ["derive"] }
k256.workspace = true
rustc-hash.workspace = true
hashbrown = "0.15"
rayon = { workspace = true, optional = true }
substrate-bn = { version = "0.6.0", optional = true }
secp256k1 = { workspace = true, optional = true }
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.15.0", optional = true }

bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }

[dev-dependencies]
hex.workspace = true
colored = "2.1.0"
spinoff = "0.8.0"

[features]
default = ["std", "secp256k1"]
std = [
    "dep:serde_json",
    "dep:walkdir",
    "dep:datatest-stable",
    "dep:lazy_static",
    "dep:rayon",
    "ethrex-common/std",
    "ethrex-rlp/std",
    "ethrex-crypto/std",
    "k256/std",
    "bytes/serde",
    "serde/std",
    "thiserror/std",
    "dep:p256",
    "dep:ripemd",
    "dep:malachite",
    "dep:lambdaworks-math",
    "dep:bls12_381",
    "dep:ark-bn254",
    "dep:ark-ec",
    "dep:ark-ff",
]
secp256k1 = ["dep:secp256k1"]
c-kzg = ["ethrex-common/c-kzg", "ethrex-crypto/c-kzg"]
ethereum_foundation_tests = []
debug = []
sp1 = ["dep:substrate-bn"]
risc0 = ["dep:substrate-bn", "c-kzg"]
zisk = ["dep:substrate-bn", "dep:ziskos"]
openvm = ["ethrex-common/openvm"]
perf_opcode_timings = ["std"]

[lints.rust]
unsafe_code = "warn"
warnings = "warn"
rust_2018_idioms = "warn"

[lints.clippy]
panic = "deny"
unnecessary_cast = "warn"
deref_by_slicing = "warn"
indexing_slicing = "warn"
manual_unwrap_or = "warn"
manual_unwrap_or_default = "warn"
as_conversions = "deny"
unwrap_used = "deny"
expect_used = "deny"
redundant_clone = "warn"

arithmetic_side_effects = "deny"
panicking_overflow_checks = "warn"
manual_saturating_arithmetic = "warn"

[lib]
path = "./src/lib.rs"
