[package]
name = "ef_tests-blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
ethrex-blockchain.workspace = true
ethrex-common = { workspace = true, features = ["std"] }
ethrex-storage.workspace = true
ethrex-rlp = { workspace = true, features = ["std"] }
ethrex-vm = { workspace = true, features = ["std"] }
ethrex-prover = { path = "../../../crates/l2/prover", default-features = false }
ethrex-guest-program = { path = "../../../crates/guest-program", default-features = false }

serde = { workspace = true, features = ["std"] }
serde_json.workspace = true
bytes = { workspace = true, features = ["serde"] }
hex.workspace = true
lazy_static.workspace = true
tokio = { workspace = true, features = ["full"] }
datatest-stable = "0.2.9"
regex = "1.11.1"

[lib]
path = "./lib.rs"

[features]
default = ["c-kzg"]
c-kzg = ["ethrex-blockchain/c-kzg"]
sp1 = ["ethrex-guest-program/sp1", "ethrex-prover/sp1"]
stateless = []
l2 = ["ethrex-guest-program/l2", "ethrex-prover/l2"]

[[test]]
name = "all"
harness = false
