[package]
name = "ef_tests-statev2"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
ethrex-blockchain.workspace = true
ethrex-common = { workspace = true, features = ["std"] }
ethrex-storage.workspace = true
ethrex-rlp = { workspace = true, features = ["std"] }
ethrex-vm = { workspace = true, features = ["std"] }
ethrex-levm = { workspace = true, features = ["std"] }
ethrex-l2-rpc.workspace = true

secp256k1.workspace = true
serde = { workspace = true, features = ["std"] }
serde_json.workspace = true
bytes = { workspace = true, features = ["serde"] }
hex.workspace = true
thiserror = { workspace = true, features = ["std"] }
clap.workspace = true
clap_complete.workspace = true
tokio = { workspace = true, features = ["full"] }
rustc-hash = "2.1.1"
colored = "2.1.0"
alloy-rlp = "0.3.12"
chrono = "0.4"
prettytable-rs = "0.10"

[dev-dependencies]
hex = "0.4.3"

[features]
default = ["c-kzg"]
c-kzg = ["ethrex-vm/c-kzg", "ethrex-levm/c-kzg", "ethrex-common/c-kzg"]
block = []
