[package]
name = "runner"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
ethrex-levm = { path = "../" }
ethrex-vm = { workspace = true, features = ["std"] }
ethrex-common = { workspace = true, features = ["std"] }
ethrex-storage.workspace = true
ethrex-blockchain.workspace = true
hex.workspace = true
bytes = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "rc", "std"] }
serde_json.workspace = true
json5 = "0.4.1"
clap.workspace = true
log = "0.4.27"
env_logger = "0.11.8"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rustc-hash.workspace = true

[lints]
workspace = true
